--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p onclick="">Hello world!</p>
+    <p onclick="">Hello world p!</p>
     <script src="JS/script.js"></script>
     <!-- <script>
       alert(1);
