--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+    <title>Document</title></head
+  >`
   <body>
     <p onclick="">Hello world p!</p>
     <script src="JS/script.js"></script>
