--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <p onclick="">Hello world p!</p>
     <h1>123</h1>
+    <p>ghbdt</p>
     <script src="JS/script.js"></script>
     <!-- <script>
       alert(1);
