--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <p onclick="">Hello world p!</p>
     <h1>123</h1>
     <p>ghbdt</p>
+    <div>Hol</div>
     <script src="JS/script.js"></script>
     <!-- <script>
       alert(1);
